<resources>
    <string name="app_name">HomeFix</string>
    <color name="beige">#fff0c7</color>
    <string name="times"><u>Current Selected Times \n(TAP BELOW TO REMOVE A TIME- ATLEAST 1 HAS TO BE SET)</u></string>
    <color name="button">#009FB7</color>
    <string name="login">Login</string>
    <string name="L">Login</string>
    <string name="textview">TextView</string>
    <string name="back">Back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="LOGO">TODO</string>
    <string name="todo">TODO</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="add_service">Add Service</string>
    <string name="show_service_list">Show Service List</string>
    <string name="sign_out">Sign Out</string>
    <string name="service_options">Service Options</string>
    <string name="title_activity_service_info">ServiceInfo</string>
    <string name="write_a_review">Write A Review</string>
    <string name="email">Email:</string>
    <string name="ratingOfService">Rating:</string>
    <string name="User_review">Review:</string>
    <string name="review_save">Save</string>
    <string name="your_thoughts">Your Thoughts...</string>
    <string name="out_of_5">Out of 5</string>
    <string name="hint_email">email</string>
    <string name="Review_Backbutton">TODO</string>
    <string name="all_availabilities">All Availabilities</string>
    <string name="All_Availabilities_Back">TODO</string>
    <string name="list_of_currently_offered_services">List of currently offered Services</string>
    <string name="Current_bookings_back">TODO</string>
    <string name="service_name_insert_here">[SERVICE NAME INSERT HERE]</string>
    <string name="HomeOwnerServiceProviderBackButton">TODO</string>
    <string name="service_providers">Service Providers</string>
    <string name="review">Review</string>
    <string name="date">Date</string>
    <string name="company_name">Company Name:</string>

</resources>
