<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Write_A_Review"
    android:background="@color/beige">

    <TextView
        android:id="@+id/Write_a_Review"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:text="@string/write_a_review"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold"
        app:fontFamily="@font/x" />

    <TextView
        android:id="@+id/User_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="133dp"
        android:text="@string/email"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:fontFamily="@font/x" />

    <TextView
        android:id="@+id/Review_Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="181dp"
        android:text="@string/ratingOfService"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:fontFamily="@font/x" />

    <TextView
        android:id="@+id/Review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="235dp"
        android:text="@string/User_review"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        app:fontFamily="@font/x" />

    <Button
        android:id="@+id/button"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:layout_marginBottom="135dp"
        android:background="@color/button"
        android:text="@string/review_save"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        app:fontFamily="@font/x" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/User_Email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginEnd="62dp"
        android:layout_marginRight="62dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:fontFamily="@font/x" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Review_Rating"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="94dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="172dp"
        android:hint="@string/out_of_5"
        android:textSize="14sp"
        android:inputType=""
        app:fontFamily="@font/x" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="363dp"
        android:layout_height="102dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="272dp"
        android:ems="10"
        android:hint="@string/your_thoughts"
        android:inputType="textMultiLine"
        android:textSize="14sp"
        app:fontFamily="@font/x" />

    <ImageButton
        android:id="@+id/review_Backbutton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="false"
        android:background="#FFF0c7"
        android:contentDescription="@string/Review_Backbutton"
        android:cropToPadding="false"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:srcCompat="?attr/homeAsUpIndicator" />


</RelativeLayout>